# nighterrors

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
packaging/aur/: README.md
packaging/aur/nighterrors-bin/: .SRCINFO  PKGBUILD  nighterrors-0.1.0-x86_64-unknown-linux-gnu.tar.xz
packaging/aur/nighterrors-git/: .SRCINFO  PKGBUILD
packaging/aur/nighterrors-git/nighterrors/: config  packed-refs
packaging/aur/nighterrors-git/nighterrors/objects/pack/: pack-03b126130c17760b852e74801464223a1bf4c04b.idx  pack-03b126130c17760b852e74801464223a1bf4c04b.pack  pack-03b126130c17760b852e74801464223a1bf4c04b.rev
scripts/: build-release-archive.sh  update-aur-bin-package.sh  update-aur-srcinfo.sh
src/: cli.rs  color.rs  daemon.rs  ipc.rs  main.rs  output.rs  protocols.rs  service.rs
src/backends/: hyprland_ctm.rs  mod.rs  wlr_gamma.rs
